--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
 body {font-family: "Open Sans"}
 </style>
-<body class="w3-black">
+<body class="w3-white">
 
 <!-- Navigation bar with social media icons -->
 <div class="w3-top">
@@ -93,12 +93,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <br>
 
           </li>
-          <li class="w3-padding-16">
-            <a href="https://chalobon.github.io/Nurichcha/"><img src="B8.png" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px"></a>
-            <span class="w3-large">Nurichcha</span>
-            <br>
-
-          </li>
+          
           <li class="w3-padding-16">
             <a href="https://chalobon.github.io/Chanikan/"><img src="B3.jpg" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px"></a>
             <span class="w3-large">Chanikan</span>
